# proiect-inginerie-software-shark-rockets

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists_deps.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  generate_proto.sh  package-lock.json  package.json  product-vision.md  product_features.md  sample.cpp  user-personas.md  user-stories.md
.github/workflows/: koala-image.yml
assets/: activity_diagram.md  customer_journey.md  non_functional_requirements.md  product_features.md  product_vision.md  setup.md  software_architecture_report.md  sprint1_report.docx  sprint1_report.md  sprint2_report.docx  sprint2_report.md  sprint3_report.md  sprint4_report.md  sprint_report_4.md  testing_paradigms.md  user_personas.md  user_stories.md
e2e-tests/: conftest.py  consts.py  data.py  eucalypt_endpoint.py  solvers.py  test_computation.py  test_fault_tolerance.py  test_smoke.py  utils.py
e2e-tests/results/: full_testing  testing
eucalypt/: README.md
eucalypt/material-react-app/: .env  .gitignore  Dockerfile  package-lock.json  package.json
eucalypt/material-react-app/public/: index.html
eucalypt/material-react-app/src/: App.js  routes.js
eucalypt/material-react-app/src/assets/theme-dark/base/: colors.js
eucalypt/material-react-app/src/assets/theme/base/: colors.js
eucalypt/material-react-app/src/auth/forgot-password/: index.js
eucalypt/material-react-app/src/auth/login/: index.js
eucalypt/material-react-app/src/auth/register/: index.js
eucalypt/material-react-app/src/auth/reset-password/: index.js
eucalypt/material-react-app/src/components/MDAccordion/: MDAccordionRoot.js  index.js
eucalypt/material-react-app/src/components/MDBox/: MDBoxRoot.js
eucalypt/material-react-app/src/context/: index.js
eucalypt/material-react-app/src/examples/AdminRoute/: index.js
eucalypt/material-react-app/src/examples/Configurator/: index.js
eucalypt/material-react-app/src/examples/LayoutContainers/PageLayout/: index.js
eucalypt/material-react-app/src/examples/Navbars/DashboardNavbar/: index.js
eucalypt/material-react-app/src/examples/Navbars/DefaultNavbar/: DefaultNavbarMobile.js  index.js
eucalypt/material-react-app/src/examples/NumberInput/: index.js
eucalypt/material-react-app/src/examples/Sidenav/: index.js
eucalypt/material-react-app/src/examples/Tables/DataTable/: DataTableBodyCell.js  DataTableHeadCell.js  index.js
eucalypt/material-react-app/src/layouts/dashboard/: index.js
eucalypt/material-react-app/src/layouts/token/: index.js
eucalypt/material-react-app/src/layouts/user-management/: data.js  index.js
eucalypt/material-react-app/src/layouts/user-profile/: index.js
eucalypt/material-react-app/src/layouts/user-requests/: data.js  index.js
eucalypt/material-react-app/src/services/: connection-service.js  htttp.service.js  user-management-service.js
eucalypt/node-api/: .dockerignore  .env  .gitignore  Dockerfile  README.md  build_docker_image  package-lock.json  package.json
eucalypt/node-api/__tests__/: me_test.js  persistor_test.js
eucalypt/node-api/src/: index.js
eucalypt/node-api/src/mongo/: ReseedAction.js  clearDbs.js  seedData.js
eucalypt/node-api/src/routes/: index.js
eucalypt/node-api/src/routes/connectionKoala/: index.js
eucalypt/node-api/src/routes/users/: index.js
eucalypt/node-api/src/schemas/: cronjobs.schema.js  job.schema.js  task.schema.js  token.schema.js  user.schema.js
eucalypt/node-api/src/services/auth/: index.js
eucalypt/node-api/src/services/connectionKoala/: index.js
eucalypt/node-api/src/services/me/: index.js
eucalypt/node-api/src/services/persistor/: index.js
eucalypt/node-api/src/services/users/: index.js
helm/eucalypt_frontend/: Chart.yaml  values.yaml
helm/eucalypt_frontend/templates/: configmap_eucalypt_frontend.yaml  deployment_eucalypt_frontend.yaml  load_balancer_eucalypt_frontend.yaml
helm/koala_eucalypt_bundled/: Chart.yaml  values.yaml
helm/koala_eucalypt_bundled/templates/: _helpers.tpl  cluster_ip_eucalypt_backend.yaml  cluster_ip_master.yaml  configmap_eucalypt_backend.yaml  deployment_eucalypt_backend.yaml  deployment_master.yaml  deployment_users.yaml  deployment_workers.yaml  load_balancer_eucalypt_backend.yaml  persistent_volume.yaml  persistent_volume_claim.yaml
map_reduce/: CMakeLists.txt  map_reduce.cpp  map_reduce.hpp  master_service.grpc.pb.cc  master_service.grpc.pb.h
map_reduce/src/: koala.hpp  map_reduce.cpp  map_reduce.hpp  utils.cpp  utils.hpp
master/: CMakeLists.txt  master.cpp  worker_service.pb.h
master/src/: event.cpp  event.hpp  file_system_manager.cpp  file_system_manager.hpp  job.hpp  job_leg.hpp  job_wait_handle.cpp  job_wait_handle.hpp  master.cpp  master_state.cpp  master_state.hpp  monitor.cpp  monitor.hpp  persistor.cpp  persistor.hpp  task.hpp  user.cpp  user.hpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp
proto/: CMakeLists.txt  worker_service.proto
proto/src/: connection_service.proto  eucalypt_service.proto  health_service.proto  master_service.proto  persistor_service.proto  worker_service.proto
sandbox/: CMakeLists.txt
sandbox/data/: genomic_dna.py  real_estate.py  sample.py  word_counter.py
sandbox/src/: genomic_sample.cpp  real_estate.cpp  sample.cpp  word_counter.cpp
scripts/: full_format  full_rebuild  infra-build  job_cleanup  sync_boost  sync_depends  up-connect
shared/: CMakeLists.txt
shared/src/: logging.cpp  logging.hpp  shared_util.cpp  shared_util.hpp
templates/: docker-compose.yml.jinja  eucalypt_backend.env.jinja  eucalypt_frontend.env.jinja  populate_templates.py
test/: CMakeLists.txt
test/koala/: CMakeLists.txt  lib_test.cpp  test.cpp
test/master/: CMakeLists.txt  job_wait_test.cpp  nfs_test.cpp  test.cpp
test/worker/: CMakeLists.txt
worker/: CMakeLists.txt  master_service.pb.cc  master_service.pb.h  worker.cpp  worker_service.grpc.pb.cc  worker_service.grpc.pb.h  worker_service.pb.cc
worker/src/: health_check.cpp  health_check.hpp  utils.cpp  utils.hpp  worker.cpp  worker_impl.cpp  worker_impl.h  worker_impl.hpp
(+9 files in other folders)
